[package]
name = "btf-macros"
version = "0.1.0"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
insta = { version = "1.43.2" }
prettyplease = { version = "0.2.37" }

[lints]
workspace = true
